// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddExchangeCard should render 1`] = `
<div>
  <div
    class="sc-AxhCb jCtSzq flex col-span-2"
    data-testid="Card"
  >
    <div
      class="flex items-center p-2 font-semibold text-theme-primary"
    >
      <div
        class="sc-AxjAm cpczEI p-4 mr-4 rounded-lg bg-theme-primary-contrast"
        height="1em"
        width="1em"
      >
        <svg>
          plus.svg
        </svg>
      </div>
      Add Exchange
    </div>
    <div
      class="absolute flex items-center m-4 space-x-1 -top-1 -right-1"
    />
  </div>
</div>
`;

exports[`BlankExchangeCard should render when blank 1`] = `
<div>
  <div
    class="sc-AxhCb jCtSzq"
    data-testid="Card"
  >
    <div
      class="flex items-center p-2 font-semibold text-theme-primary-contrast"
    >
      <div
        class="w-12 h-12 mr-4 border-2 rounded-lg border-theme-primary-contrast"
      />
      Exchange Name
    </div>
    <div
      class="absolute flex items-center m-4 space-x-1 -top-1 -right-1"
    />
  </div>
</div>
`;

exports[`ExchangeCard should render 1`] = `
<div>
  <div
    class="sc-AxhCb jCtSzq"
    data-testid="Card"
  >
    <div
      class="flex items-center p-2 font-semibold text-theme-primary"
    >
      <div
        class="mr-4"
      >
        <div
          class="w-12 h-12"
        >
          <svg>
            changenow-logo.svg
          </svg>
        </div>
      </div>
      <div
        class="truncate"
      >
        Test Exchange
      </div>
    </div>
    <div
      class="absolute flex items-center m-4 space-x-1 -top-1 -right-1"
    >
      <div
        class="relative"
        data-testid="dropdown__toggle"
      >
        <div
          class="flex justify-center w-4 overflow-hidden"
        >
          <div
            class="sc-AxjAm cpczEI p-1 transition-colors duration-200 cursor-pointer text-theme-primary-300 dark:text-theme-neutral-600 hover:text-theme-danger-400"
            height="1em"
            width="1em"
          >
            <svg>
              settings.svg
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
